[gd_scene load_steps=19 format=3 uid="uid://dwhhv6klxmdrr"]

[ext_resource type="Script" uid="uid://bv7qi0dbksfe2" path="res://scenes/sambung ayat scenes/imla/soal_manager.gd" id="1_koqc8"]
[ext_resource type="Texture2D" uid="uid://byxjs02jrsmu3" path="res://assets/Asset game/background/inepapanassettanpamja-10.png" id="1_yym14"]
[ext_resource type="Texture2D" uid="uid://dqquafwwf6vw8" path="res://assets/Asset game/button/buttonkirim-2.png" id="2_105l2"]
[ext_resource type="PackedScene" uid="uid://bfh36lheu87d1" path="res://scenes/countdown_timer.tscn" id="4_7atal"]
[ext_resource type="PackedScene" uid="uid://bp00kox3dq740" path="res://scenes/sambung ayat scenes/imla/soal 1/imla_soal_1.tscn" id="6_rled6"]
[ext_resource type="PackedScene" uid="uid://8v3abkmw6hsv" path="res://scenes/sambung ayat scenes/imla/soal 2/imla_soal_2.tscn" id="7_5adpw"]
[ext_resource type="PackedScene" uid="uid://dooyxciaod7tm" path="res://scenes/sambung ayat scenes/imla/soal 4/imla_soal_4.tscn" id="7_be2ij"]
[ext_resource type="PackedScene" uid="uid://dimq8qqkaa8tn" path="res://scenes/sambung ayat scenes/imla/soal 3/imla_soal_3.tscn" id="7_ipgq4"]
[ext_resource type="PackedScene" uid="uid://doiiky1g3iagv" path="res://scenes/sambung ayat scenes/imla/soal 5/imla_soal_5.tscn" id="8_ftgff"]
[ext_resource type="PackedScene" uid="uid://di5wrs55xjpa8" path="res://scenes/sambung ayat scenes/imla/soal 6/imla_soal_6.tscn" id="10_uii2g"]
[ext_resource type="PackedScene" uid="uid://b12vjxr821vkt" path="res://scenes/sambung ayat scenes/imla/soal 7/imla_soal_7.tscn" id="11_g8aos"]
[ext_resource type="PackedScene" uid="uid://bh8bj6bjtbt5q" path="res://scenes/sambung ayat scenes/imla/soal 8/imla_soal_8.tscn" id="12_bt06l"]
[ext_resource type="Script" uid="uid://ch01plorjx0xa" path="res://scenes/sambung ayat scenes/imla/nilai_scene.gd" id="13_208hl"]
[ext_resource type="Texture2D" uid="uid://b78cgrdqt7tei" path="res://assets/Asset game/background/bcrounpolos1-1.png" id="14_wseyb"]
[ext_resource type="Texture2D" uid="uid://n1vp4b4hl0ru" path="res://assets/Asset game/button/buttonkembali-4.png" id="15_441tx"]
[ext_resource type="Texture2D" uid="uid://btuv12i2evkm7" path="res://assets/Asset game/nilai/PUTIH TULANG BUTTON NILAI-2.png" id="16_i1ilx"]
[ext_resource type="Texture2D" uid="uid://pv3ycndiwrw7" path="res://assets/Asset game/Bintang/bintgaburevisi-1.png" id="17_03xdd"]
[ext_resource type="Texture2D" uid="uid://5slnoba3o3tj" path="res://assets/Asset game/nilai/buttonillai-1.png" id="18_vnkkn"]

[node name="Main_Imla" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_yym14")
expand_mode = 1

[node name="CanvasGroup" type="Node2D" parent="."]

[node name="imla soal 1" parent="CanvasGroup" instance=ExtResource("6_rled6")]

[node name="imla soal 2" parent="CanvasGroup" instance=ExtResource("7_5adpw")]
visible = false

[node name="imla soal 3" parent="CanvasGroup" instance=ExtResource("7_ipgq4")]
visible = false

[node name="imla soal 4" parent="CanvasGroup" instance=ExtResource("7_be2ij")]
visible = false

[node name="imla soal 5" parent="CanvasGroup" instance=ExtResource("8_ftgff")]
visible = false

[node name="imla soal 6" parent="CanvasGroup" instance=ExtResource("10_uii2g")]
visible = false

[node name="imla soal 7" parent="CanvasGroup" instance=ExtResource("11_g8aos")]
visible = false

[node name="imla soal 8" parent="CanvasGroup" instance=ExtResource("12_bt06l")]
visible = false

[node name="Nilai Scene" type="Control" parent="CanvasGroup"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("13_208hl")

[node name="TextureRect" type="TextureRect" parent="CanvasGroup/Nilai Scene"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("14_wseyb")
expand_mode = 1

[node name="Button" type="Button" parent="CanvasGroup/Nilai Scene/TextureRect"]
layout_mode = 0
offset_left = 15.0
offset_top = 13.0
offset_right = 94.0
offset_bottom = 94.0
icon = ExtResource("15_441tx")
flat = true
expand_icon = true

[node name="Assetsnillai-3" type="Sprite2D" parent="CanvasGroup/Nilai Scene/TextureRect"]
position = Vector2(576, 136)
scale = Vector2(0.22081, 0.22081)
texture = ExtResource("16_i1ilx")

[node name="Bintang 1" type="Sprite2D" parent="CanvasGroup/Nilai Scene/TextureRect"]
position = Vector2(576, 368)
scale = Vector2(0.190611, 0.190611)
texture = ExtResource("17_03xdd")

[node name="Bintang 2" type="Sprite2D" parent="CanvasGroup/Nilai Scene/TextureRect"]
position = Vector2(384, 432)
scale = Vector2(0.156674, 0.156674)
texture = ExtResource("17_03xdd")

[node name="Bintang 3" type="Sprite2D" parent="CanvasGroup/Nilai Scene/TextureRect"]
position = Vector2(784, 432)
scale = Vector2(0.151159, 0.151159)
texture = ExtResource("17_03xdd")

[node name="Buttonillai-1" type="Sprite2D" parent="CanvasGroup/Nilai Scene"]
position = Vector2(576, 120)
scale = Vector2(0.206467, 0.206467)
texture = ExtResource("18_vnkkn")

[node name="CountdownTimer" parent="CanvasGroup" instance=ExtResource("4_7atal")]

[node name="Button" type="Button" parent="CanvasGroup"]
offset_left = 816.0
offset_top = 520.0
offset_right = 1108.0
offset_bottom = 608.0
icon = ExtResource("2_105l2")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="SoalManager" type="Node" parent="."]
script = ExtResource("1_koqc8")

[connection signal="pressed" from="CanvasGroup/Button" to="SoalManager" method="go_to_next_question"]
[connection signal="tree_entered" from="SoalManager" to="CanvasGroup" method="_on_soal_manager_tree_entered"]
